--- a/Internship/Spring/OrgEmployee/src/main/resources/application.properties
+++ b/Internship/Spring/OrgEmployee/src/main/resources/application.properties
@@ -8,3 +8,11 @@ logging.level.org.springframework.web=DEBUG
 spring.jpa.properties.hibernate.dialecr=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=debug
+
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+
+
+
+
